@@ -1,5 +1,8 @@
 2008-05-13  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* CMakeLists.txt: Allow ENABLE_PYTHON variable to allow disabling of
+	Python.
+
 	* libavogadro/src/tools/drawtool.cpp: Fixed uninitialised variables.
 
 2008-05-12  Marcus D. Hanwell  <marcus@cryos.org>
